# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: check-uv-lock-vulnerabilities-daily.py  check-uv-lock-vulnerabilities-daily.sh  check-uv-lock-vulnerabilities.py  check-uv-lock-vulnerabilities.sh  check_uv_lock_vulnerabilities.py  check_uv_lock_vulnerabilities_daily.py
